ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 3.2.5, 3.3.3
    • Affects Version/s: None
    • Component/s: Write Ops
    • Fully Compatible
    • ALL
    • Repl 11 (03/11/16)
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      src/mongo/db/commands/write_commands/batch_executor.cpp:344:19: error: moving a temporary object prevents copy elision [-Werror,-Wpessimizing-move]
              wcError = std::move(toWriteConcernError(status, res));
                        ^
      src/mongo/db/commands/write_commands/batch_executor.cpp:344:19: note: remove std::move call here
              wcError = std::move(toWriteConcernError(status, res));
                        ^~~~~~~~~~                                ~
      

            Assignee:
            Eric Milkie
            Reporter:
            Eric Milkie
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: