SERVER-22947 fix pessimizing move in batch_executor